# mrkpq

./: .gitignore  COPYING  Makefile.am  README  configure.ac  do-it
src/: Makefile.am  diag.txt  gen-diag  mrkpq.c  mrkpq.h  mrkpq_private.h
test/: Makefile.am  gen-diag  testfoo.c  unittest.h
